Added assets, finished footer, amended the readme for new title and created the beginings of the website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Mark Noone Web Design & Development</title>
+
+    <!-- Open-Sans Import -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" 
+        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Font Awesome CDN -->
+    <script src="https://use.fontawesome.com/9bef4558e0.js"></script>
+
+  </head>
+  <body>
+    <div class="container-fluid" style="background-color: #62c87a; height: 500px;">
+        <div class="row justify-content-center">
+                <img src="assets/logo.svg" alt="Company Logo">
+        </div>
+        <div class="row justify-content-center">
+                <h1 style="color: white;">
+                        <span class="header-word">Plan.</span>
+                        <span class="header-word">Design.</span>
+                        <span class="header-word">Develop.</span>
+                </h1>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+                <div class="image-container">
+                        <img class="image" src="assets/profile.jpg" alt="Picture of the author.">
+                </div>
+        </div>
+        <div class="row justify-content-center">
+                <div class="col-lg-6">
+                        <p class="main-paragraph"> 
+                            Aliquam molestie mauris vel interdum feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eleifend magna non quam aliquet, 
+                            ut lobortis diam molestie. Integer velit lacus, cursus ut accumsan vel, scelerisque id sapien. Nunc tempor eros ut lacus vestibulum mollis. 
+                            Vivamus malesuada felis a sodales convallis. Pellentesque mauris sem, mattis sed ornare vitae, laoreet id dolor. Aliquam congue nibh lectus, 
+                            sed blandit velit sollicitudin a. Nulla blandit finibus hendrerit.
+                        </p>
+                        <p class="main-paragraph"> 
+                            Quisque laoreet, sem et luctus luctus, magna nulla gravida tortor, et cursus velit diam non neque. Donec at feugiat nunc, eget dictum tortor. 
+                            Sed eget mi vel magna imperdiet cursus ac ac dolor. Proin sollicitudin, diam eget venenatis iaculis, mauris massa ultrices justo, et varius est 
+                            lectus vitae dolor. Aenean libero massa, tristique sed ornare id, bibendum non massa. Ut varius arcu at orci venenatis dictum. Ut feugiat eget 
+                            ante ut fringilla. Aliquam gravida ex nunc, eu finibus ipsum varius eget. Curabitur lacus lorem, euismod vel elit vel, faucibus tempus ipsum. 
+                            Vestibulum id nibh sagittis, molestie sapien vitae, bibendum lorem. Orci varius natoque penatibus et magnis dis parturient montes, nascetur 
+                            ridiculus mus. Suspendisse at nulla mollis est tempor tincidunt. Etiam quis tortor lorem. Pellentesque imperdiet diam id ligula rhoncus, ac porta 
+                            elit bibendum. Aliquam pulvinar est ac bibendum efficitur. Donec congue malesuada nunc at tincidunt.
+                        </p>
+                </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <hr />
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <h3> My Work </h3>
+        </div>
+    </div>
+
+    <div class="container-fluid" style="background-color: #f5f5f3; height: 500px;">
+        <div class="row justify-content-center">
+            <h3> My Skills </h3>
+        </div>
+    </div>
+
+    <div class="container-fluid" style="background-color: #62c87a; height: 500px;">
+        <div class="row justify-content-center">
+            <h3> Contact Me! </h3>
+        </div>
+    </div>
+
+    <div class="container-fluid" style="background-color: #3c4955; height: 100px;">
+        <div class="row justify-content-center" style="margin-bottom: -10px;">
+            <div class="col-lg-9" style="margin-top: 5px;">
+                <hr style="border-color:white;" />
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-2" style="margin-top: 5px;">
+                            <p style="color:white;"> Mark Noone</p>
+                        </div>
+                        <div class="col-lg-2 offset-lg-8" style="margin-top: 5px;">
+                            <a href="#"><i class="fa fa-facebook footer-icon" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-twitter footer-icon" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-linkedin footer-icon" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-github footer-icon-end" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>  
+        </div>
+    </div>
+
+
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" 
+        integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" 
+        crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" 
+        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" 
+        crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" 
+        integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" 
+        crossorigin="anonymous">
+    </script>
+
+  </body>
+</html>
