--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Mark Noone Web Design & Development</title>
+    <title>MN Web Design & Development</title>
 
-    <!-- Open-Sans Import -->
+    <!-- Google Fonts Import -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" 
@@ -72,15 +73,65 @@
         </div>
     </div>
 
-    <div class="container-fluid" style="background-color: #f5f5f3; height: 500px;">
+    <div class="container-fluid" style="background-color: #f5f5f3; height: 550px;">
         <div class="row justify-content-center">
-            <h3> My Skills </h3>
+            <h3 class="skills skills-header"> My Skills </h3>
+        </div>
+        <div class="row justify-content-center">
+            <p class="skills skills-text"> What I can help you out with! </p>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-9">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-6 skills-section">
+                            <img src="assets/Css Logo.svg" align="left" class="skills-image">
+                            <h6 class="skills skills-sub-header" >HTML/CSS</h6>
+                            <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
+                        </div>
+                        <div class="col-lg-6 skills-section">
+                            <img src="assets/javascript.svg" align="left" class="skills-image" style="width: 80px;">
+                            <h6 class="skills skills-sub-header" >Javascript</h6>
+                            <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
+                        </div>
+                        <div class="col-lg-6 skills-section">
+                            <img src="assets/nodejs-full.svg" align="left" class="skills-image">
+                            <h6 class="skills skills-sub-header" >Node JS</h6>
+                            <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
+                        </div>
+                        <div class="col-lg-6 skills-section">
+                            <img src="assets/java.svg" align="left" class="skills-image" style="width: 80px;">
+                            <h6 class="skills skills-sub-header" >Java</h6>
+                            <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="container-fluid" style="background-color: #62c87a; height: 500px;">
         <div class="row justify-content-center">
             <h3> Contact Me! </h3>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-3">
+                <p style="text-align: center;">Please don't hesitate to contact me if you need something done or even just want to chat!</p>
+            </div>  
+        </div>
+        <div class="row justify-content-center">
+            <form>
+                <div class="form-group">
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" id="exampleTextarea" placeholder="Message" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form> 
         </div>
     </div>
 
