--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row justify-content-center">
                 <img src="assets/logo.svg" alt="Company Logo">
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center hero-caption">
                 <h1 style="color: white;">
                         <span class="header-word">Plan.</span>
                         <span class="header-word">Design.</span>
@@ -75,33 +75,33 @@
 
     <div class="container-fluid" style="background-color: #f5f5f3; height: 550px;">
         <div class="row justify-content-center">
-            <h3 class="skills skills-header"> My Skills </h3>
+            <h3 class="skills header"> My Skills </h3>
         </div>
         <div class="row justify-content-center">
-            <p class="skills skills-text"> What I can help you out with! </p>
+            <p class="skills text"> What I can help you out with! </p>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-9">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-6 skills-section">
+                        <div class="col-lg-6 section">
                             <img src="assets/Css Logo.svg" align="left" class="skills-image">
-                            <h6 class="skills skills-sub-header" >HTML/CSS</h6>
+                            <h6 class="skills sub-header" >HTML/CSS</h6>
                             <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
                         </div>
-                        <div class="col-lg-6 skills-section">
+                        <div class="col-lg-6 section">
                             <img src="assets/javascript.svg" align="left" class="skills-image" style="width: 80px;">
-                            <h6 class="skills skills-sub-header" >Javascript</h6>
+                            <h6 class="skills sub-header" >Javascript</h6>
                             <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
                         </div>
-                        <div class="col-lg-6 skills-section">
+                        <div class="col-lg-6 section">
                             <img src="assets/nodejs-full.svg" align="left" class="skills-image">
-                            <h6 class="skills skills-sub-header" >Node JS</h6>
+                            <h6 class="skills sub-header" >Node JS</h6>
                             <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
                         </div>
-                        <div class="col-lg-6 skills-section">
+                        <div class="col-lg-6 section">
                             <img src="assets/java.svg" align="left" class="skills-image" style="width: 80px;">
-                            <h6 class="skills skills-sub-header" >Java</h6>
+                            <h6 class="skills sub-header" >Java</h6>
                             <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
                         </div>
                     </div>
@@ -112,25 +112,25 @@
 
     <div class="container-fluid" style="background-color: #62c87a; height: 500px;">
         <div class="row justify-content-center">
-            <h3> Contact Me! </h3>
+            <h3 class="contact header"> Contact Me! </h3>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-3">
-                <p style="text-align: center;">Please don't hesitate to contact me if you need something done or even just want to chat!</p>
+                <p class="contact text" >Please don't hesitate to contact me if you need something done or even just want to chat!</p>
             </div>  
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" style="margin-top: 20px; text-align: center;">
             <form>
                 <div class="form-group">
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                    <input type="email" class="form-control contact-input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control contact-input" id="exampleInputPassword1" placeholder="Email">
                 </div>
-                <div class="form-group">
-                    <textarea class="form-control" id="exampleTextarea" placeholder="Message" rows="3"></textarea>
+                <div class="form-group" >
+                    <textarea class="form-control contact-input" id="exampleTextarea" placeholder="Message" rows="3"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary outline contact-submit">Submit</button>
             </form> 
         </div>
     </div>
