Got the my work tab to work

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                         <img class="image" src="assets/profile.jpg" alt="Picture of the author.">
                 </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" style="margin-bottom: 100px;">
                 <div class="col-lg-6">
-                        <p class="main-paragraph"> 
+                        <p class="text"> 
                             Aliquam molestie mauris vel interdum feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eleifend magna non quam aliquet, 
                             ut lobortis diam molestie. Integer velit lacus, cursus ut accumsan vel, scelerisque id sapien. Nunc tempor eros ut lacus vestibulum mollis. 
                             Vivamus malesuada felis a sodales convallis. Pellentesque mauris sem, mattis sed ornare vitae, laoreet id dolor. Aliquam congue nibh lectus, 
                             sed blandit velit sollicitudin a. Nulla blandit finibus hendrerit.
                         </p>
-                        <p class="main-paragraph"> 
+                        <p class="text"> 
                             Quisque laoreet, sem et luctus luctus, magna nulla gravida tortor, et cursus velit diam non neque. Donec at feugiat nunc, eget dictum tortor. 
                             Sed eget mi vel magna imperdiet cursus ac ac dolor. Proin sollicitudin, diam eget venenatis iaculis, mauris massa ultrices justo, et varius est 
                             lectus vitae dolor. Aenean libero massa, tristique sed ornare id, bibendum non massa. Ut varius arcu at orci venenatis dictum. Ut feugiat eget 
@@ -67,9 +67,65 @@
         </div>
     </div>
 
+    <div class="container-fluid" style="margin-top: 60px;">
+        <div class="row justify-content-center">
+            <h3 class="header" style="color: #2C2C2C; margin-bottom: 60px;"> My Work </h3>
+        </div>
+    </div>
+
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <h3> My Work </h3>
+            <div class="col-lg-9">
+                <div class="container-fluid">
+                    <div class="row">
+
+                        <div class="col-lg-4">
+                            <div class="hover12 column">
+                                <div>
+                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
+                                    <span>Project Name</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4">
+                            <div class="hover12 column">
+                                <div>
+                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
+                                    <span>Project Name</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4">
+                            <div class="hover12 column">
+                                <div>
+                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
+                                    <span>Project Name</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4">
+                            <div class="hover12 column">
+                                <div>
+                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
+                                    <span>Project Name</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4">
+                            <div class="hover12 column">
+                                <div>
+                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
+                                    <span>Project Name</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
