--- a/index.html
+++ b/index.html
@@ -166,28 +166,30 @@
         </div>
     </div>
 
-    <div class="container-fluid" style="background-color: #62c87a; height: 500px;">
-        <div class="row justify-content-center">
-            <h3 class="contact header"> Contact Me! </h3>
+    <div class="container-fluid" style="background-color: #62c87a; height: 400px;">
+        <div class="row justify-content-center" >
+            <h3 class="contact header" style="margin-top:100px;"> Contact Me! </h3>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-3">
-                <p class="contact text" >Please don't hesitate to contact me if you need something done or even just want to chat!</p>
+                <p style="margin-top:30px;" class="contact text" >Please don't hesitate to contact me if you need something done or even just want to chat!</p>
             </div>  
         </div>
+
         <div class="row justify-content-center" style="margin-top: 20px; text-align: center;">
-            <form>
+            <!-- <form action="index.php" method="post">
                 <div class="form-group">
-                    <input type="email" class="form-control contact-input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
+                    <input type="text" name="name" class="form-control contact-input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control contact-input" id="exampleInputPassword1" placeholder="Email">
+                    <input type="email"  name="email" class="form-control contact-input" id="exampleInputPassword1" placeholder="Email">
                 </div>
                 <div class="form-group" >
-                    <textarea class="form-control contact-input" id="exampleTextarea" placeholder="Message" rows="3"></textarea>
+                    <textarea class="form-control contact-input" name="message" id="exampleTextarea" placeholder="Message" rows="3"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary outline contact-submit">Submit</button>
-            </form> 
+                <input type="submit" value="Send" class="btn btn-primary outline contact-submit"></input>
+            </form>  -->
+            <p style="color:white;"><i class="fa fa-envelope fa-lg"></i> <span style="margin-left:10px;">manoone@tcd.ie</span></p>
         </div>
     </div>
 
