--- a/index.html
+++ b/index.html
@@ -1,237 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>MN Web Design & Development</title>
-
-    <!-- Google Fonts Import -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" 
-        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-
-    <!-- Font Awesome CDN -->
-    <script src="https://use.fontawesome.com/9bef4558e0.js"></script>
-
-  </head>
-  <body>
-    <div class="container-fluid" style="background-color: #62c87a; height: 500px;">
-        <div class="row justify-content-center">
-                <img src="assets/logo.svg" alt="Company Logo">
-        </div>
-        <div class="row justify-content-center hero-caption">
-                <h1 style="color: white;">
-                        <span class="header-word">Plan.</span>
-                        <span class="header-word">Design.</span>
-                        <span class="header-word">Develop.</span>
-                </h1>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row justify-content-center">
-                <div class="image-container">
-                        <img class="image" src="assets/profile.jpg" alt="Picture of the author.">
-                </div>
-        </div>
-        <div class="row justify-content-center" style="margin-bottom: 100px;">
-                <div class="col-lg-6">
-                        <p class="text"> 
-                            Aliquam molestie mauris vel interdum feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eleifend magna non quam aliquet, 
-                            ut lobortis diam molestie. Integer velit lacus, cursus ut accumsan vel, scelerisque id sapien. Nunc tempor eros ut lacus vestibulum mollis. 
-                            Vivamus malesuada felis a sodales convallis. Pellentesque mauris sem, mattis sed ornare vitae, laoreet id dolor. Aliquam congue nibh lectus, 
-                            sed blandit velit sollicitudin a. Nulla blandit finibus hendrerit.
-                        </p>
-                        <p class="text"> 
-                            Quisque laoreet, sem et luctus luctus, magna nulla gravida tortor, et cursus velit diam non neque. Donec at feugiat nunc, eget dictum tortor. 
-                            Sed eget mi vel magna imperdiet cursus ac ac dolor. Proin sollicitudin, diam eget venenatis iaculis, mauris massa ultrices justo, et varius est 
-                            lectus vitae dolor. Aenean libero massa, tristique sed ornare id, bibendum non massa. Ut varius arcu at orci venenatis dictum. Ut feugiat eget 
-                            ante ut fringilla. Aliquam gravida ex nunc, eu finibus ipsum varius eget. Curabitur lacus lorem, euismod vel elit vel, faucibus tempus ipsum. 
-                            Vestibulum id nibh sagittis, molestie sapien vitae, bibendum lorem. Orci varius natoque penatibus et magnis dis parturient montes, nascetur 
-                            ridiculus mus. Suspendisse at nulla mollis est tempor tincidunt. Etiam quis tortor lorem. Pellentesque imperdiet diam id ligula rhoncus, ac porta 
-                            elit bibendum. Aliquam pulvinar est ac bibendum efficitur. Donec congue malesuada nunc at tincidunt.
-                        </p>
-                </div>
-        </div>
-    </div>
-
-    <div class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <hr />
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid" style="margin-top: 60px;">
-        <div class="row justify-content-center">
-            <h3 class="header" style="color: #2C2C2C; margin-bottom: 60px;"> My Work </h3>
-        </div>
-    </div>
-
-    <div class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-lg-9">
-                <div class="container-fluid">
-                    <div class="row">
-
-                        <div class="col-lg-4">
-                            <div class="hover12 column">
-                                <div>
-                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
-                                    <span>Project Name</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4">
-                            <div class="hover12 column">
-                                <div>
-                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
-                                    <span>Project Name</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4">
-                            <div class="hover12 column">
-                                <div>
-                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
-                                    <span>Project Name</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4">
-                            <div class="hover12 column">
-                                <div>
-                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
-                                    <span>Project Name</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4">
-                            <div class="hover12 column">
-                                <div>
-                                    <figure><img src="https://nxworld.net/example/css-image-hover-effects/pic01.jpg" /></figure>
-                                    <span>Project Name</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid" style="background-color: #f5f5f3; height: 550px;">
-        <div class="row justify-content-center">
-            <h3 class="skills header"> My Skills </h3>
-        </div>
-        <div class="row justify-content-center">
-            <p class="skills text"> What I can help you out with! </p>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-lg-9">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-6 section">
-                            <img src="assets/Css Logo.svg" align="left" class="skills-image">
-                            <h6 class="skills sub-header" >HTML/CSS</h6>
-                            <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
-                        </div>
-                        <div class="col-lg-6 section">
-                            <img src="assets/javascript.svg" align="left" class="skills-image" style="width: 80px;">
-                            <h6 class="skills sub-header" >Javascript</h6>
-                            <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
-                        </div>
-                        <div class="col-lg-6 section">
-                            <img src="assets/nodejs-full.svg" align="left" class="skills-image">
-                            <h6 class="skills sub-header" >Node JS</h6>
-                            <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
-                        </div>
-                        <div class="col-lg-6 section">
-                            <img src="assets/java.svg" align="left" class="skills-image" style="width: 80px;">
-                            <h6 class="skills sub-header" >Java</h6>
-                            <p class="skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam accumsan nisi et suscipit sodales.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid" style="background-color: #62c87a; height: 400px;">
-        <div class="row justify-content-center" >
-            <h3 class="contact header" style="margin-top:100px;"> Contact Me! </h3>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-lg-3">
-                <p style="margin-top:30px;" class="contact text" >Please don't hesitate to contact me if you need something done or even just want to chat!</p>
-            </div>  
-        </div>
-
-        <div class="row justify-content-center" style="margin-top: 20px; text-align: center;">
-            <!-- <form action="index.php" method="post">
-                <div class="form-group">
-                    <input type="text" name="name" class="form-control contact-input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
-                </div>
-                <div class="form-group">
-                    <input type="email"  name="email" class="form-control contact-input" id="exampleInputPassword1" placeholder="Email">
-                </div>
-                <div class="form-group" >
-                    <textarea class="form-control contact-input" name="message" id="exampleTextarea" placeholder="Message" rows="3"></textarea>
-                </div>
-                <input type="submit" value="Send" class="btn btn-primary outline contact-submit"></input>
-            </form>  -->
-            <p style="color:white;"><i class="fa fa-envelope fa-lg"></i> <span style="margin-left:10px;">manoone@tcd.ie</span></p>
-        </div>
-    </div>
-
-    <div class="container-fluid" style="background-color: #3c4955; height: 100px;">
-        <div class="row justify-content-center" style="margin-bottom: -10px;">
-            <div class="col-lg-9" style="margin-top: 5px;">
-                <hr style="border-color:white;" />
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-2" style="margin-top: 5px;">
-                            <p style="color:white;"> Mark Noone</p>
-                        </div>
-                        <div class="col-lg-2 offset-lg-8" style="margin-top: 5px;">
-                            <a href="#"><i class="fa fa-facebook footer-icon" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-twitter footer-icon" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-linkedin footer-icon" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-github footer-icon-end" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>  
-        </div>
-    </div>
-
-
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" 
-        integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" 
-        crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" 
-        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" 
-        crossorigin="anonymous">
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" 
-        integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" 
-        crossorigin="anonymous">
-    </script>
-
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet"><title>Mark Noone</title><link href="/static/css/2.1f208231.chunk.css" rel="stylesheet"><link href="/static/css/main.48664a01.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,a,i=r[0],c=r[1],l=r[2],s=0,p=[];s<i.length;s++)a=i[s],Object.prototype.hasOwnProperty.call(o,a)&&o[a]&&p.push(o[a][0]),o[a]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(f&&f(r);p.length;)p.shift()();return u.push.apply(u,l||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,i=1;i<t.length;i++){var c=t[i];0!==o[c]&&(n=!1)}n&&(u.splice(r--,1),e=a(a.s=t[0]))}return e}var n={},o={1:0},u=[];function a(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,a),t.l=!0,t.exports}a.e=function(e){var r=[],t=o[e];if(0!==t)if(t)r.push(t[2]);else{var n=new Promise((function(r,n){t=o[e]=[r,n]}));r.push(t[2]=n);var u,i=document.createElement("script");i.charset="utf-8",i.timeout=120,a.nc&&i.setAttribute("nonce",a.nc),i.src=function(e){return a.p+"static/js/"+({}[e]||e)+"."+{3:"131f634f"}[e]+".chunk.js"}(e);var c=new Error;u=function(r){i.onerror=i.onload=null,clearTimeout(l);var t=o[e];if(0!==t){if(t){var n=r&&("load"===r.type?"missing":r.type),u=r&&r.target&&r.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")",c.name="ChunkLoadError",c.type=n,c.request=u,t[1](c)}o[e]=void 0}};var l=setTimeout((function(){u({type:"timeout",target:i})}),12e4);i.onerror=i.onload=u,document.head.appendChild(i)}return Promise.all(r)},a.m=e,a.c=n,a.d=function(e,r,t){a.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},a.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},a.t=function(e,r){if(1&r&&(e=a(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(a.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)a.d(t,n,function(r){return e[r]}.bind(null,n));return t},a.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return a.d(r,"a",r),r},a.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},a.p="/",a.oe=function(e){throw console.error(e),e};var i=this.webpackJsonppersonal_thangs=this.webpackJsonppersonal_thangs||[],c=i.push.bind(i);i.push=r,i=i.slice();for(var l=0;l<i.length;l++)r(i[l]);var f=c;t()}([])</script><script src="/static/js/2.b840fe4c.chunk.js"></script><script src="/static/js/main.9924c6be.chunk.js"></script></body></html>
